# mpris-bridge

./: .gitignore  README.md  mpris-bridge.spec  pyproject.toml  settings.ini
scripts/: build_binary.py  install_systemd_user.sh  package_release.py  uninstall_systemd_user.sh
src/mpris_bridge/: __init__.py  __main__.py  app.py  artwork.py  cli.py  config.py  mpris.py  schema.py
systemd/: mpris-bridge.service
tests/: test_schema.py
