[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpris-bridge"
version = "0.1.0"
description = "Expose Linux MPRIS media sessions through a SMTC Bridge compatible REST API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
mpris-bridge = "mpris_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
